[gd_scene load_steps=8 format=3 uid="uid://dsph5apuxhkun"]

[ext_resource type="Script" path="res://menus/volume_menu.gd" id="1_7n4q7"]
[ext_resource type="Theme" path="res://menus/menu_theme.tres" id="1_sjx7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ku4gj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wp181"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4gab5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufqyw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xty6l"]

[node name="volume_menu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sjx7f")
script = ExtResource("1_7n4q7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.839216, 0.384314, 1)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 10.0
offset_right = 82.0
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Volume"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="master" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/master"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Master"

[node name="master_slider" type="HSlider" parent="CenterContainer/VBoxContainer/master"]
custom_minimum_size = Vector2(300, 86)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../back_button")
focus_neighbor_bottom = NodePath("../../music/music_slider")
focus_next = NodePath("../../music/music_slider")
focus_previous = NodePath("../../../../back_button")
max_value = 1.0
step = 0.05

[node name="music" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/music"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Music"

[node name="music_slider" type="HSlider" parent="CenterContainer/VBoxContainer/music"]
custom_minimum_size = Vector2(300, 86)
layout_mode = 2
focus_neighbor_top = NodePath("../../master/master_slider")
focus_neighbor_bottom = NodePath("../../sfx/sfx_slider")
focus_next = NodePath("../../sfx/sfx_slider")
focus_previous = NodePath("../../master/master_slider")
max_value = 1.0
step = 0.05

[node name="sfx" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/sfx"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Sounds"

[node name="sfx_slider" type="HSlider" parent="CenterContainer/VBoxContainer/sfx"]
custom_minimum_size = Vector2(300, 86)
layout_mode = 2
focus_neighbor_top = NodePath("../../music/music_slider")
focus_neighbor_bottom = NodePath("../../voice/voice_slider")
focus_next = NodePath("../../voice/voice_slider")
focus_previous = NodePath("../../music/music_slider")
max_value = 1.0
step = 0.05

[node name="voice" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/voice"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Voices"

[node name="voice_slider" type="HSlider" parent="CenterContainer/VBoxContainer/voice"]
custom_minimum_size = Vector2(300, 86)
layout_mode = 2
focus_neighbor_top = NodePath("../../sfx/sfx_slider")
focus_neighbor_bottom = NodePath("../../../../back_button")
focus_next = NodePath("../../../../back_button")
focus_previous = NodePath("../../sfx/sfx_slider")
max_value = 1.0
step = 0.05

[node name="back_button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
offset_left = 224.0
offset_top = 32.0
offset_right = 454.0
offset_bottom = 113.0
focus_neighbor_left = NodePath("../CenterContainer/VBoxContainer/voice/voice_slider")
focus_neighbor_top = NodePath("../CenterContainer/VBoxContainer/voice/voice_slider")
focus_neighbor_right = NodePath("../CenterContainer/VBoxContainer/master/master_slider")
focus_neighbor_bottom = NodePath("../CenterContainer/VBoxContainer/master/master_slider")
focus_next = NodePath("../CenterContainer/VBoxContainer/master/master_slider")
focus_previous = NodePath("../CenterContainer/VBoxContainer/voice/voice_slider")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_ku4gj")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wp181")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4gab5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ufqyw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xty6l")
text = "‚Üê Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/master/master_slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/music/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
